updated tara builder to java 11. added encodings to maven